# FaissWrapper

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/faiss_wrapper/: README.md  __init__.py  dtype.py  manager.py  method.py  metric.py  parameter.py  result.py  types.py
src/faiss_wrapper/binary/: README.md  manager.py
src/faiss_wrapper/binary/flat/: manager.py
src/faiss_wrapper/binary/hash/: manager.py
src/faiss_wrapper/binary/hnsw/: __init__.py  manager.py
src/faiss_wrapper/binary/ivf/: manager.py
src/faiss_wrapper/binary/multi_hash/: __init__.py  manager.py
src/faiss_wrapper/float/: README.md  __init__.py  manager.py
src/faiss_wrapper/float/flat/: manager.py
src/faiss_wrapper/float/hnsw/: manager.py
src/faiss_wrapper/float/ivf/: __init__.py  manager.py
src/faiss_wrapper/float/ivfpq/: manager.py
src/faiss_wrapper/float/lsh/: manager.py
src/faiss_wrapper/managers/: README.md  __init__.py
src/faiss_wrapper/managers/binary/: README.md  __init__.py  manager.py
src/faiss_wrapper/managers/binary/flat/: __init__.py  manager.py
src/faiss_wrapper/managers/binary/hash/: __init__.py  manager.py
src/faiss_wrapper/managers/binary/hnsw/: manager.py
src/faiss_wrapper/managers/binary/ivf/: __init__.py  manager.py
src/faiss_wrapper/managers/binary/multi_hash/: manager.py
src/faiss_wrapper/managers/float/: README.md  manager.py
src/faiss_wrapper/managers/float/flat/: __init__.py  manager.py
src/faiss_wrapper/managers/float/hnsw/: __init__.py  manager.py
src/faiss_wrapper/result/: README.md  __init__.py  batch.py  single.py  utils.py
tests/: test.py  test_parameter.py
(+5 files in other folders)
